fix figure labels

--- a/tutorials/R/soils/soil-microbe-biomass/soil-microbe-biomass-drivers.html
+++ b/tutorials/R/soils/soil-microbe-biomass/soil-microbe-biomass-drivers.html
@@ -561,7 +561,7 @@ for(i in 1:length(soilPlots)){
 
 legend(&quot;topleft&quot;, legend=soilPlots, col=colors, pch=1, bty=&quot;n&quot;)
 </code></pre>
-<p>![ ](<a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/soils/soil-microbe-biomass/rfigs/mb-temp">https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/soils/soil-microbe-biomass/rfigs/mb-temp</a> plot-1.png)</p>
+<p><img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/soils/soil-microbe-biomass/rfigs/mb-temp-plot-1.png" alt=" " /></p>
 <p>There isn’t an obvious relationship between soil temperature and microbial biomass and the range in soil temperature is relatively narrow due to the subtropical location of the site.</p>
 <h2 id="6-microbial-biomass-relationship-with-soil-moisture">6. Microbial biomass relationship with soil moisture</h2>
 <p>Now let’s make a similar plot using soil moisture instead of soil temperature.</p>
@@ -589,7 +589,7 @@ for(i in 1:length(soilPlots)){
 
 legend(&quot;topleft&quot;, legend=soilPlots, col=colors, pch=1, bty=&quot;n&quot;)
 </code></pre>
-<p>![ ](<a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/soils/soil-microbe-biomass/rfigs/mb-swc">https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/soils/soil-microbe-biomass/rfigs/mb-swc</a> plot-1.png)</p>
+<p><img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/soils/soil-microbe-biomass/rfigs/mb-swc-plot-1.png" alt=" " /></p>
 <p>There’s a lot of noise, but generally there appears to be a positive relationship between soil moisture and microbial biomass. Given the warm but relatively dry climate at GUAN it is perhaps not surprising that microbial biomass increases when more water is available in the soil.</p>
 <p>It is likely that many other factors besides soil temperature and moisture also influence microbial biomass. Some of these relationships could be further explored using these data products (e.g., soil pH or organic carbon content) as well as other NEON data (e.g., root biomass). In addition, NEON data from across the US could be used to identify the dominant drivers of microbial biomass in different climates.</p>
 </div>
