--- a/tutorials-in-development/Other/test_code_tabs.html
+++ b/tutorials-in-development/Other/test_code_tabs.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Test reticulate tabs</title>
+<title>test_code_tabs.knit</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -348,7 +348,6 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Test reticulate tabs</h1>
 
 </div>
 
