update the model eval to just report model name and AIC score, since AIC score is further in the DF and may not be visible on some PCs. corrected a misspelled socre to be score.

--- a/tutorials/R/biodiversity/beetle-forecasting/NEON_forecast_challenge_beetle_tutorial_ESA2024.html
+++ b/tutorials/R/biodiversity/beetle-forecasting/NEON_forecast_challenge_beetle_tutorial_ESA2024.html
@@ -387,17 +387,17 @@ mod_fit_candidates &lt;- targets_clim_train %&gt;%
 
 
 
-# look at fit stats
+# look at fit stats and identify the best model using AIC, where the lowest AIC is the best model
 
-fabletools::report(mod_fit_candidates)
+fabletools::report(mod_fit_candidates) %&gt;%
+  select(`.model`, AIC)
 
-## # A tibble: 3 x 15
-##   .model    r_squared adj_r_squared  sigma2 statistic p_value    df log_lik   AIC  AICc   BIC      CV deviance
-##   &lt;chr&gt;         &lt;dbl&gt;         &lt;dbl&gt;   &lt;dbl&gt;     &lt;dbl&gt;   &lt;dbl&gt; &lt;int&gt;   &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;   &lt;dbl&gt;    &lt;dbl&gt;
-## 1 mod_temp   0.0332         0.0245  0.00416    3.78    0.0544     2    149. -610. -610. -602. 0.00421    0.458
-## 2 mod_prec~  0.000797      -0.00829 0.00430    0.0877  0.768      2    147. -606. -606. -598. 0.00541    0.473
-## 3 mod_temp~  0.0333         0.0156  0.00420    1.88    0.158      3    149. -608. -608. -597. 0.00500    0.458
-## # i 2 more variables: df.residual &lt;int&gt;, rank &lt;int&gt;
+## # A tibble: 3 x 2
+##   .model            AIC
+##   &lt;chr&gt;           &lt;dbl&gt;
+## 1 mod_temp        -610.
+## 2 mod_precip      -606.
+## 3 mod_temp_precip -608.
 </code></pre>
 <p>Now, plot the predicted versus observed abundance data.</p>
 <pre><code># visualize model fit
@@ -514,14 +514,14 @@ fc_best_lm_efi &lt;- fc_best_lm %&gt;%
 <pre><code>head(fc_best_lm_efi)
 
 ## # A tibble: 6 x 10
-##   datetime   site_id parameter model_id      family variable prediction project_id reference_datetime duration
-##   &lt;date&gt;     &lt;chr&gt;   &lt;chr&gt;     &lt;chr&gt;         &lt;chr&gt;  &lt;chr&gt;         &lt;dbl&gt; &lt;chr&gt;      &lt;chr&gt;              &lt;chr&gt;   
-## 1 2022-01-01 OSBS    1         bet_abund_ex~ ensem~ abundan~     0.0557 neon4cast  2022-01-01         P1W     
-## 2 2022-01-01 OSBS    2         bet_abund_ex~ ensem~ abundan~     0.118  neon4cast  2022-01-01         P1W     
-## 3 2022-01-01 OSBS    3         bet_abund_ex~ ensem~ abundan~     0.0680 neon4cast  2022-01-01         P1W     
-## 4 2022-01-01 OSBS    4         bet_abund_ex~ ensem~ abundan~     0.0152 neon4cast  2022-01-01         P1W     
-## 5 2022-01-01 OSBS    5         bet_abund_ex~ ensem~ abundan~     0.0648 neon4cast  2022-01-01         P1W     
-## 6 2022-01-01 OSBS    6         bet_abund_ex~ ensem~ abundan~     0.0167 neon4cast  2022-01-01         P1W
+##   datetime   site_id parameter model_id                    family   variable  prediction project_id reference_datetime duration
+##   &lt;date&gt;     &lt;chr&gt;   &lt;chr&gt;     &lt;chr&gt;                       &lt;chr&gt;    &lt;chr&gt;          &lt;dbl&gt; &lt;chr&gt;      &lt;chr&gt;              &lt;chr&gt;   
+## 1 2022-01-01 OSBS    1         bet_abund_example_tslm_temp ensemble abundance     0.0603 neon4cast  2022-01-01         P1W     
+## 2 2022-01-01 OSBS    2         bet_abund_example_tslm_temp ensemble abundance     0.135  neon4cast  2022-01-01         P1W     
+## 3 2022-01-01 OSBS    3         bet_abund_example_tslm_temp ensemble abundance     0.0213 neon4cast  2022-01-01         P1W     
+## 4 2022-01-01 OSBS    4         bet_abund_example_tslm_temp ensemble abundance     0.147  neon4cast  2022-01-01         P1W     
+## 5 2022-01-01 OSBS    5         bet_abund_example_tslm_temp ensemble abundance     0.108  neon4cast  2022-01-01         P1W     
+## 6 2022-01-01 OSBS    6         bet_abund_example_tslm_temp ensemble abundance     0.150  neon4cast  2022-01-01         P1W
 
 
 # visualize the EFI-formatted submission
@@ -677,16 +677,15 @@ mod_scores &lt;- score(
 head(mod_scores)
 
 ## # A tibble: 6 x 17
-##   model_id      reference_datetime site_id datetime   family variable observation   crps   logs   mean  median
-##   &lt;chr&gt;         &lt;chr&gt;              &lt;chr&gt;   &lt;date&gt;     &lt;chr&gt;  &lt;chr&gt;          &lt;dbl&gt;  &lt;dbl&gt;  &lt;dbl&gt;  &lt;dbl&gt;   &lt;dbl&gt;
-## 1 bet_abund_ex~ 2022-01-01         OSBS    2022-04-04 sample abundan~      0.102  0.0515 -0.928 0.0300 0.00424
-## 2 bet_abund_ex~ 2022-01-01         OSBS    2022-04-18 sample abundan~      0.188  0.121  -0.125 0.0212 0.00923
-## 3 bet_abund_ex~ 2022-01-01         OSBS    2022-04-25 sample abundan~      0.0877 0.0159 -1.85  0.105  0.104  
-## 4 bet_abund_ex~ 2022-01-01         OSBS    2022-05-02 sample abundan~      0.0857 0.0339 -1.13  0.0392 0.0263 
-## 5 bet_abund_ex~ 2022-01-01         OSBS    2022-05-16 sample abundan~      0.0786 0.0207 -1.36  0.0754 0.0639 
-## 6 bet_abund_ex~ 2022-01-01         OSBS    2022-05-30 sample abundan~      0.133  0.0319 -1.18  0.116  0.0835 
-## # i 6 more variables: sd &lt;dbl&gt;, quantile97.5 &lt;dbl&gt;, quantile02.5 &lt;dbl&gt;, quantile90 &lt;dbl&gt;, quantile10 &lt;dbl&gt;,
-## #   horizon &lt;drtn&gt;
+##   model_id reference_datetime site_id datetime   family variable observation   crps  logs   mean median     sd quantile97.5 quantile02.5 quantile90
+##   &lt;chr&gt;    &lt;chr&gt;              &lt;chr&gt;   &lt;date&gt;     &lt;chr&gt;  &lt;chr&gt;          &lt;dbl&gt;  &lt;dbl&gt; &lt;dbl&gt;  &lt;dbl&gt;  &lt;dbl&gt;  &lt;dbl&gt;        &lt;dbl&gt;        &lt;dbl&gt;      &lt;dbl&gt;
+## 1 bet_abu~ 2022-01-01         OSBS    2022-04-04 sample abundan~      0.102  0.0171 -1.74 0.0797 0.0797 0.0562        0.146      -0.0111      0.145
+## 2 bet_abu~ 2022-01-01         OSBS    2022-04-18 sample abundan~      0.188  0.123   1.27 0.0345 0.0434 0.0579        0.111      -0.0339      0.105
+## 3 bet_abu~ 2022-01-01         OSBS    2022-04-25 sample abundan~      0.0877 0.0208 -1.60 0.0594 0.0717 0.0616        0.134      -0.0346      0.133
+## 4 bet_abu~ 2022-01-01         OSBS    2022-05-02 sample abundan~      0.0857 0.0270 -1.42 0.0519 0.0367 0.0584        0.160      -0.0153      0.147
+## 5 bet_abu~ 2022-01-01         OSBS    2022-05-16 sample abundan~      0.0786 0.0166 -1.70 0.0738 0.0622 0.0659        0.156      -0.0411      0.154
+## 6 bet_abu~ 2022-01-01         OSBS    2022-05-30 sample abundan~      0.133  0.0376 -1.07 0.0763 0.0691 0.106         0.230      -0.0817      0.225
+## # i 2 more variables: quantile10 &lt;dbl&gt;, horizon &lt;drtn&gt;
 </code></pre>
 <p>Are these scores better than our null models? Here, we will score the <code>mod_mean</code> and <code>mod_naive</code> models, and combine the null model scores with the scores for our <code>best_lm</code> forecast above. Then we can compare.</p>
 <pre><code># get scores for the mean and naive models
@@ -709,7 +708,7 @@ mod_results_to_score_null &lt;- fc_null_efi %&gt;%
 
 
 
-# socre the forecasts for those dates
+# score the forecasts for those dates
 
 mod_null_scores &lt;- score(
   forecast = mod_results_to_score_null,
