--- a/tutorials/R/Geospatial-skills/intro-raster-r/04-Multi-Band-Rasters-In-R/04-Multi-Band-Rasters-In-R.html
+++ b/tutorials/R/Geospatial-skills/intro-raster-r/04-Multi-Band-Rasters-In-R/04-Multi-Band-Rasters-In-R.html
@@ -130,13 +130,13 @@ a raster can contain 1 or more bands.</p>
     <figcaption>A raster can contain one or more bands. We can use the terra `rast` function to import one single band from a single OR multi-band
     raster. Source: National Ecological Observatory Network (NEON).</figcaption>
 </figure>
-<p>To work with multi-band rasters in R, we need to change how we import and plot our data in several ways.</p>
+<p>To work with multiband rasters in R, we need to change how we import and plot our data in several ways.</p>
 <ul>
-<li>To import multi band raster data we will use the <code>stack()</code> function.</li>
-<li>If our multi-band data are imagery that we wish to composite, we can use <code>plotRGB()</code> (instead of <code>plot()</code>) to plot a 3 band raster image.</li>
+<li>To import multiband raster data we will use the <code>stack()</code> function.</li>
+<li>If our multiband data are imagery that we wish to composite, we can use <code>plotRGB()</code> (instead of <code>plot()</code>) to plot a 3 band raster image.</li>
 </ul>
-<h2 id="about-multi-band-imagery">About Multi-Band Imagery</h2>
-<p>One type of multi-band raster dataset that is familiar to many of us is a color image. A basic color image consists of three bands: red, green, and blue. Each band represents light reflected from the red, green or blue portions of the electromagnetic spectrum. The pixel brightness for each band, when composited creates the colors that we see in an image.</p>
+<h2 id="about-multiband-imagery">About MultiBand Imagery</h2>
+<p>One type of multiband raster dataset that is familiar to many of us is a color image. A basic color image consists of three bands: red, green, and blue. Each band represents light reflected from the red, green or blue portions of the electromagnetic spectrum. The pixel brightness for each band, when composited creates the colors that we see in an image.</p>
 <figure>
     <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/hyperspectral-general/RGBSTack_1.jpg">
     <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/hyperspectral-general/RGBSTack_1.jpg"
@@ -146,8 +146,7 @@ a raster can contain 1 or more bands.</p>
     </figcaption>
 </figure>
 <h2 id="getting-started-with-multi-band-data-in-r">Getting Started with Multi-Band Data in R</h2>
-<p>To work with multi-band raster data we will use the <code>raster</code> and <code>rgdal</code>
-packages.</p>
+<p>To work with multiband raster data we will use the <code>terra</code> package.</p>
 <pre><code># terra package to work with raster data
 
 library(terra)
@@ -177,9 +176,6 @@ setwd(wd)
 <p>In this tutorial, the multi-band data that we are working with is imagery collected using the
 <a href="https://www.neonscience.org/data-collection/airborne-remote-sensing" target="_blank">NEON Airborne Observation Platform</a>
 high resolution camera over the <a href="https://www.neonscience.org/field-sites/field-sites-map/HARV" target="_blank">NEON Harvard Forest field site</a>. Each RGB image is a 3-band raster. The same steps would apply to working with a multi-spectral image with 4 or more bands - like Landsat imagery, or even hyperspectral imagery (in geotiff format). We can plot each band of a multi-band image individually.</p>
-<div id="ds-dataTip" markdown="1">
-<i class="fa fa-star"></i> **Data Tip:** In many GIS applications, a single band would render as a single image in grayscale. We will therefore use a grayscale palette to render individual bands. 
-</div>
 <pre><code>byTileAOP(dpID='DP3.30010.001', # rgb camera data
           site='HARV',
           year='2022',
@@ -199,55 +195,33 @@ high resolution camera over the <a href="https://www.neonscience.org/field-sites
 ## Successfully downloaded 1 files to ~/data//DP3.30010.001</p>
 <p><img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/Geospatial-skills/intro-raster-r/04-Multi-Band-Rasters-In-R/rfigs/demonstrate-RGB-Image-1.png" alt="Red, green, and blue composite (true color) image of NEON’s Harvard Forest (HARV) site" /></p>
 <p>Or we can plot each bands separately as follows:</p>
-<p><img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/Geospatial-skills/intro-raster-r/04-Multi-Band-Rasters-In-R/rfigs/plot-RGB-now-1.png" alt="Red, green, and blue bands of the camera imagery at NEON’s Harvard Forest (HARV) site" /><img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/Geospatial-skills/intro-raster-r/04-Multi-Band-Rasters-In-R/rfigs/plot-RGB-now-2.png" alt="Red, green, and blue bands of the camera imagery at NEON’s Harvard Forest (HARV) site" /><img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/Geospatial-skills/intro-raster-r/04-Multi-Band-Rasters-In-R/rfigs/plot-RGB-now-3.png" alt="Red, green, and blue bands of the camera imagery at NEON’s Harvard Forest (HARV) site" />
-Let’s take a look at some attributes of this multiband raster. In a multiband dataset, each band of the raster will always have the same <em>extent</em>, <em>CRS</em> and <em>resolution</em>.</p>
-<pre><code># Read in multi-band raster with raster function. 
+<pre><code># Determine the number of bands
 
-# Default is the first band only.
-
-RGB_band1_HARV &lt;- 
-  raster(paste0(wd,&quot;NEON-DS-Airborne-Remote-Sensing/HARV/RGB_Imagery/HARV_RGB_Ortho.tif&quot;))
-
-## Error in raster(paste0(wd, &quot;NEON-DS-Airborne-Remote-Sensing/HARV/RGB_Imagery/HARV_RGB_Ortho.tif&quot;)): could not find function &quot;raster&quot;
-
-# create a grayscale color palette to use for the image.
-
-grayscale_colors &lt;- gray.colors(100,            # number of different color levels 
-                                start = 0.0,    # how black (0) to go
-                                end = 1.0,      # how white (1) to go
-                                gamma = 2.2,    # correction between how a digital 
-                                # camera sees the world and how human eyes see it
-                                alpha = NULL)   #Null=colors are not transparent
+num_bands &lt;- nlyr(RGB_HARV)
 
 
 
-# Plot band 1
+# Define colors to plot each
 
-plot(RGB_band1_HARV, 
-     col=grayscale_colors, 
-     axes=FALSE,
-     main=&quot;RGB Imagery - Band 1-Red\nNEON Harvard Forest Field Site&quot;) 
+# Define color palettes for each band using RColorBrewer
 
-## Error in h(simpleError(msg, call)): error in evaluating the argument 'x' in selecting a method for function 'plot': object 'RGB_band1_HARV' not found
+colors &lt;- list(
+  brewer.pal(9, &quot;Reds&quot;),
+  brewer.pal(9, &quot;Greens&quot;),
+  brewer.pal(9, &quot;Blues&quot;)
+)
 
-# view attributes: Check out dimension, CRS, resolution, values attributes, and 
 
-# band.
 
-RGB_band1_HARV
+# Plot each band in a loop, with the specified colors
 
-## Error in eval(expr, envir, enclos): object 'RGB_band1_HARV' not found
+for (i in 1:num_bands) {
+  plot(RGB_HARV[[i]], main=paste(&quot;Band&quot;, i), col=colors[[i]])
+}
 </code></pre>
-<p>Notice that when we look at the attributes of RGB_Band1, we see :</p>
-<p><code>band: 1  (of  3  bands)</code></p>
-<p>This is R telling us that this particular raster object has more bands (3)
-associated with it.</p>
-<div id="ds-dataTip" markdown="1">
-<i class="fa fa-star"></i> **Data Tip:** The number of bands associated with a 
-raster object can also be determined using the `nbands` slot. Syntax is 
-`ObjectName@file@nbands`, or specifically for our file: `RGB_band1_HARV@file@nbands`.
-</div>
+<p><img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/Geospatial-skills/intro-raster-r/04-Multi-Band-Rasters-In-R/rfigs/plot-bands-separately-1.png" alt="Red band" /><img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/Geospatial-skills/intro-raster-r/04-Multi-Band-Rasters-In-R/rfigs/plot-bands-separately-2.png" alt="Green band" /><img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/Geospatial-skills/intro-raster-r/04-Multi-Band-Rasters-In-R/rfigs/plot-bands-separately-3.png" alt="Blue band" /></p>
 <h3 id="image-raster-data-attributes">Image Raster Data Attributes</h3>
+<p>We can display some of the attributes about the raster, as shown below:</p>
 <pre><code># Print dimensions
 
 cat(&quot;Dimensions:\n&quot;)
@@ -348,8 +322,8 @@ the case of a RGB image (red, green and blue), band 1 is the red band. When we p
 pixels with more red in them (a strong red reflection). Smaller numbers (towards 0) represent pixels with less red in them (less red was reflected).
 To plot an RGB image, we mix red + green + blue values into one single color to create a full color image - this is the standard color image a digital camera creates.</p>
 <div id="ds-challenge" markdown="1">
-### Challenge: Making Sense of Single Bands of a Multi-Band Image
-Go back to the code chunk where you plotted each band separately. Compare the plots of band 1 (red) and band 2 (green). Is the forested area darker or lighter in band 2 (the green band) compared to band 1 (the red band)?  
+<h3 id="challenge-making-sense-of-single-bands-of-a-multi-band-image">Challenge: Making Sense of Single Bands of a Multi-Band Image</h3>
+<p>Go back to the code chunk where you plotted each band separately. Compare the plots of band 1 (red) and band 2 (green). Is the forested area darker or lighter in band 2 (the green band) compared to band 1 (the red band)?</p>
 </div>
 <h2 id="other-types-of-multi-band-raster-data">Other Types of Multi-band Raster Data</h2>
 <p>Multi-band raster data might also contain:</p>
@@ -396,8 +370,8 @@ plotRGB(RGB_HARV_lin_stretch, stretch=&quot;hist&quot;)
 </code></pre>
 <p>In this case, the stretch doesn’t enhance the contrast our image significantly given the distribution of reflectance (or brightness) values is distributed well between 0 and 255, and applying a stretch appears to introduce some artificial, almost purple-looking brightness to the image.</p>
 <div id="ds-challenge" markdown="1">
-### Challenge: What Methods Can Be Used on an R Object?
-We can view various methods available to call on an R object with `methods(class=class(objectNameHere))`. Use this to figure out:
+<h3 id="challenge-what-methods-can-be-used-on-an-r-object">Challenge: What Methods Can Be Used on an R Object?</h3>
+<p>We can view various methods available to call on an R object with <code>methods(class=class(objectNameHere))</code>. Use this to figure out:</p>
 <ol>
 <li>What methods can be used to call on the <code>RGB_HARV</code> object?</li>
 <li>What methods are available for a single band within <code>RGB_HARV</code>?</li>
